Fix border radius on sidebar on mobile

--- a/src/components/entry-boxes/entry-boxes-styles.module.scss
+++ b/src/components/entry-boxes/entry-boxes-styles.module.scss
@@ -16,7 +16,7 @@
     @include topLeft();
 
     & > *:first-child > div:first-child {
-      border-radius: 0;
+      border-radius: 2px;
     }
   }
 }
